# mlops_Robin_test

./: .gitignore  Makefile  README.md  data.dvc  pyproject.toml
.dvc/: config
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlop_test_cookiecutter/: __init__.py
